completing search bar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="input-group" id="adv-search">
+        <input type="text" class="form-control" placeholder="Search for meals"/>
+
+            <button type="button" class="btn btn-primary"><span class="fa fa-search" aria-hidden="true"></span></button>
+
+      </div>
+    </div>
+  </div>
+</div>
