--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,30 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="input-group" id="adv-search">
-        <input type="text" class="form-control" placeholder="Search for meals"/>
-
-            <button type="button" class="btn btn-primary"><span class="fa fa-search" aria-hidden="true"></span></button>
-
+      <div class="input-group"
+           id="adv-search">
+        <input type="text"
+               class="form-control"
+               [(ngModel)]="searchInput"
+               placeholder="Search for meals"/>
+        <button type="button"
+                (click)="search(searchInput)"
+                class="btn btn-primary">
+          <span class="fa fa-search"
+                aria-hidden="true">
+          </span>
+        </button>
       </div>
     </div>
+  </div>
+
+  <div>
+    <ul class="list-group wbdv-project">
+      <li *ngFor="let result of results"
+          class="list-group-item">
+        {{result['recipeName']}}
+      </li>
+    </ul>
+    <h2>{{results.length}}</h2>
   </div>
 </div>
