--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,17 +1,6 @@
-<div class="container">
-  <div class="input-group">
-    <input type="text"
-           class="form-control"
-           [(ngModel)]="searchInput"
-           placeholder="Search for meals"
-           (keyup.enter)="search(searchInput, 1)"/>
-    <button type="button"
-            (click)="search(searchInput, 1)"
-            class="btn btn-primary wbdv-search-button">
-      <span class="fa fa-search"></span>
-    </button>
-  </div>
+<app-search-bar></app-search-bar>
 
+<div class="container">
   <div>
     <ul class="list-group wbdv-project">
       <li *ngFor="let result of results"
@@ -24,18 +13,18 @@
   <div style="text-align: center"
        *ngIf="results.length > 0">
     <button type="button"
-            (click)="search(searchInput, currentPage - 1)"
+            (click)="search(searchText, currentPage - 1)"
             [ngClass]="{'disabled':currentPage == firstPage}"
             class="btn btn-primary wbdv-pagination-button">
       Previous
     </button>
     {{currentPage}}
     <button type="button"
-            (click)="search(searchInput, currentPage + 1)"
+            (click)="search(searchText, currentPage + 1)"
             [ngClass]="{'disabled':currentPage == lastPage}"
             class="btn btn-primary wbdv-pagination-button">
       Next
     </button>
   </div>
-
 </div>
+
