changing component name from meal to recipe

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -4,7 +4,7 @@
            class="form-control"
            [(ngModel)]="searchText"
            (keyup.enter)="navigate(searchText)"
-           placeholder="Search for meals"/>
+           placeholder="Search for recipes"/>
     <button type="button"
             (click)="navigate(searchText)"
             class="btn btn-primary wbdv-search-button">
