--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -4,18 +4,18 @@
   <div class="row">
     <div class="col-6">
       <img alt="Image not available"
-           *ngIf="mealDetails['images']"
-           src="{{mealDetails['images'][0]['imageUrlsBySize'][360]}}">
+           *ngIf="recipeDetails['images']"
+           src="{{recipeDetails['images'][0]['imageUrlsBySize'][360]}}">
     </div>
     <div class="col-6">
       <h1>
-        {{mealDetails['name']}}
+        {{recipeDetails['name']}}
       </h1>
-      <h2>Rating: {{mealDetails['rating']}}</h2>
+      <h2>Rating: {{recipeDetails['rating']}}</h2>
     </div>
   </div>
   <ul class="list-group">
-    <li *ngFor="let ingredient of mealDetails['ingredientLines']"
+    <li *ngFor="let ingredient of recipeDetails['ingredientLines']"
         class="list-group-item">
       {{ingredient}}
     </li>
