adding carousel and nav bar

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,7 @@
-.container {
-  padding-top: 50px;
+.wbdv-top-bottom-container {
+  margin-bottom: 50px;
+}
+
+.view {
+  filter: brightness(70%);
 }
