--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,31 @@
 <app-search-bar></app-search-bar>
 
-<div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="http://www.hhdenver.com/data1/images/fullhdwallpaperfood65.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://www.narathai.com.sg/img/media/carousel/AIP_Food_Nara-Thai-Cuisine_2015-06-03_Full-Res_012_web%20slider.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="http://www.donafilipahotel.com/media/2399125/_8004535.jpg?mode=crop-up&cropUpAlias=carousel&quality=70" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+<div class="wbdv-top-bottom-container">
+
+  <mdb-carousel [interval]="2000"
+                [isControls]="true"
+                class="carousel slide"
+                [type]="'carousel-thumbnails'"
+                [animation]="'slide'">
+
+    <mdb-slide *ngFor="let slide of slides">
+      <div class="view">
+        <img class="d-block w-100 img-fluid"
+             src="{{slide.imageSrc}}">
+        <div class="mask rgba-black-light waves-light"
+             mdbWavesEffect></div>
+      </div>
+      <div class="carousel-caption">
+        <h3 class="h3-responsive">{{slide.mainHeading}}</h3>
+        <p>{{slide.subHeading}}</p>
+      </div>
+    </mdb-slide>
+
+  </mdb-carousel>
+
 </div>
 
-<div class="container">
+<div class="container wbdv-top-bottom-container">
   <div class="row">
     <div class="col-sm-3">
       <div class="card">
