--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,14 +1,26 @@
-<div class="container">
-  <div class="input-group">
-    <input type="text"
-           class="form-control"
-           [(ngModel)]="searchText"
-           (keyup.enter)="navigate(searchText)"
-           placeholder="Search for recipes"/>
-    <button type="button"
-            (click)="navigate(searchText)"
-            class="btn btn-primary wbdv-search-button">
-      <span class="fa fa-search"></span>
+<div class="row" style="text-align: center">
+  <div class="col-2">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR3NvjxIvkMrGJ6EaZ9AejCQghC7mdTgE9xqjbZ42ZfaIR9Iyn"
+         (click)="goHome()"
+         width="120">
+  </div>
+  <div class="col-8 container">
+      <div class="input-group">
+        <input type="text"
+               class="form-control"
+               [(ngModel)]="searchText"
+               (keyup.enter)="navigate(searchText)"
+               placeholder="Search for recipes"/>
+        <button type="button"
+                (click)="navigate(searchText)"
+                class="btn btn-primary wbdv-search-button">
+          <span class="fa fa-search"></span>
+        </button>
+      </div>
+  </div>
+  <div class="col-2 container">
+    <button class="btn btn-primary">
+      Login/Register
     </button>
   </div>
 </div>
