--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,10 @@
 
 <div class="wbdv-top-bottom-container">
 
-  <mdb-carousel [interval]="2000"
+  <mdb-carousel [interval]="3000"
                 [isControls]="true"
                 class="carousel slide"
+                [noPause]="true"
                 [type]="'carousel-thumbnails'"
                 [animation]="'slide'">
 
