--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="wbdv-top-bottom-container">
 
-  <mdb-carousel [interval]="3000"
+  <mdb-carousel [interval]="4000"
                 [isControls]="true"
                 class="carousel slide"
                 [noPause]="true"
@@ -27,41 +27,12 @@
 </div>
 
 <div class="container wbdv-top-bottom-container">
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+  <div class="card-columns">
+    <div class="card" *ngFor="let dish of dishes" (click)="navigate(dish.id, dish.recipeName)">
+      <img class="card-img-top" src="{{dish.imageUrlsBySize[90]}}">
+      <div class="card-body">
+        <h5 class="card-title">{{dish.recipeName}}</h5>
+        <p class="card-text">{{dish.sourceDisplayName}}</p>
       </div>
     </div>
   </div>
