improved ui for register login and profile page

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,40 @@
-<div class="container-fluid">
-  <h1>Profile</h1>
+<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar">
+  <h3 class="navbar-brand">Profile</h3>
+  <form class="form-inline">
+    <button class="btn btn-outline-light my-2 my-sm-0"
+            (click)="logout()"
+            type="button">
+      Logout
+    </button>
+    <a routerLink="/home">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              type="button">
+        Home
+      </button>
+    </a>
+    <a routerLink="/admin">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              *ngIf="user['role'] === 'Admin'"
+              type="button">
+        Admin Page
+      </button>
+    </a>
+  </form>
+</nav>
+
+<div class="container-fluid wbdv-profile">
+  <div class="alert alert-success alert-dismissible fade show"
+       role="alert"
+       *ngIf="alertSuccess == true">
+    Profile updated successfully.
+    <button type="button"
+            class="close"
+            data-dismiss="alert"
+            (click)="removeAlert()"
+            aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
   <input [(ngModel)]="user.username"
          placeholder="username"
@@ -31,7 +66,4 @@
       {{ratedRecipe.recipe.name}}
     </li>
   </ul>
-
-  <a (click)="logout()">Logout</a>
-  <a routerLink="/home">Home</a>
 </div>
