--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,34 @@
-<div class="container-fluid">
-  <h1>Login</h1>
+<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar">
+  <h3 class="navbar-brand">Login</h3>
+  <form class="form-inline">
+    <a routerLink="/register">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              type="button">
+        Register
+      </button>
+    </a>
+    <a routerLink="/home">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              type="button">
+        Home
+      </button>
+    </a>
+  </form>
+</nav>
+
+<div class="container-fluid wbdv-login">
+  <div class="alert alert-danger alert-dismissible fade show"
+       role="alert"
+       *ngIf="alertUsername == true">
+    Invalid username or password. Please try again.
+    <button type="button"
+            class="close"
+            data-dismiss="alert"
+            (click)="removeUsernameAlert()"
+            aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
   <input [(ngModel)]="username"
          placeholder="username"
@@ -11,7 +40,4 @@
           class="btn btn-primary btn-block">
     Login
   </button>
-
-  <a routerLink="/register">Register</a>
-  <a routerLink="/home">Home</a>
 </div>
