--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,47 @@
-<div class="container-fluid">
-  <h1>Register</h1>
+<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar">
+  <h3 class="navbar-brand">Register</h3>
+  <form class="form-inline">
+    <a routerLink="/login">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              type="button">
+        Login
+      </button>
+    </a>
+    <a routerLink="/home">
+      <button class="btn btn-outline-light my-2 my-sm-0"
+              type="button">
+        Home
+      </button>
+    </a>
+  </form>
+</nav>
+
+<div class="container-fluid wbdv-register">
+  <div class="alert alert-danger alert-dismissible fade show"
+       role="alert"
+       *ngIf="alertPassword == true">
+    Passwords do not match. Please try again.
+    <button type="button"
+            class="close"
+            data-dismiss="alert"
+            (click)="removeAlert()"
+            aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="alert alert-danger alert-dismissible fade show"
+       role="alert"
+       *ngIf="alertUsername == true">
+    Username is already taken. Please try another username.
+    <button type="button"
+            class="close"
+            data-dismiss="alert"
+            (click)="removeUsernameAlert()"
+            aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
   <input [(ngModel)]="username"
          placeholder="username"
@@ -14,8 +56,4 @@
           class="btn btn-primary btn-block">
     Register
   </button>
-
-  <a routerLink="/login">Login</a>
-  <a routerLink="/home">Home</a>
-
 </div>
