--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,33 +1,75 @@
-<div class="row" style="text-align: center">
-  <div class="col-2">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR3NvjxIvkMrGJ6EaZ9AejCQghC7mdTgE9xqjbZ42ZfaIR9Iyn"
-         (click)="goHome()"
-         width="120">
-  </div>
-  <div class="col-8 container">
-      <div class="input-group">
-        <input type="text"
-               class="form-control"
-               [(ngModel)]="searchText"
-               (keyup.enter)="navigate(searchText)"
-               placeholder="Search for recipes"/>
-        <button type="button"
-                (click)="navigate(searchText)"
-                class="btn btn-primary wbdv-search-button">
-          <span class="fa fa-search"></span>
-        </button>
-      </div>
-  </div>
-  <div class="col-2 container">
-    <div class="row">
-      <button (click)="navigateToLogin()"
-              class="btn btn-primary">
-        Login
-      </button>
-      <button (click)="navigateToRegister()"
-              class="btn btn-primary">
-        Register
-      </button>
+<!--<div class="row" style="text-align: center">-->
+  <!--<div class="col-2">-->
+    <!--<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR3NvjxIvkMrGJ6EaZ9AejCQghC7mdTgE9xqjbZ42ZfaIR9Iyn"-->
+         <!--(click)="goHome()"-->
+         <!--width="120">-->
+  <!--</div>-->
+  <!--<div class="col-8 container">-->
+      <!--<div class="input-group">-->
+        <!--<input type="text"-->
+               <!--class="form-control"-->
+               <!--[(ngModel)]="searchText"-->
+               <!--(keyup.enter)="navigate(searchText)"-->
+               <!--placeholder="Search for recipes"/>-->
+        <!--<button type="button"-->
+                <!--(click)="navigate(searchText)"-->
+                <!--class="btn btn-primary wbdv-search-button">-->
+          <!--<span class="fa fa-search"></span>-->
+        <!--</button>-->
+      <!--</div>-->
+  <!--</div>-->
+  <!--<div class="col-2 container">-->
+    <!--<div class="row">-->
+      <!--<button (click)="navigateToLogin()"-->
+              <!--class="btn btn-primary">-->
+        <!--Login-->
+      <!--</button>-->
+      <!--<button (click)="navigateToRegister()"-->
+              <!--class="btn btn-primary">-->
+        <!--Register-->
+      <!--</button>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<nav class="navbar navbar-dark bg-dark justify-content-between">
+  <div class="row">
+    <div class="col-2">
+      <h3 class="navbar-brand">Eze-Cuisine</h3>
+    </div>
+    <div class="col-10">
+      <form class="form-inline">
+        <div class="row">
+          <div class="col-8 text-center">
+            <input type="text"
+                   class="form-control mr-sm-2"
+                   [(ngModel)]="searchText"
+                   (keyup.enter)="navigate(searchText)"
+                   placeholder="Search for recipes"
+                   aria-label="Search"/>
+            <button type="button"
+                    (click)="navigate(searchText)"
+                    class="btn btn-dark wbdv-search-button">
+              <span class="fa fa-search"></span>
+            </button>
+          </div>
+          <div class="col-4">
+            <a routerLink="/login">
+              <button class="btn btn-outline-light my-2 my-sm-0 float-right"
+                      type="button">
+                Login
+              </button>
+            </a>
+            <a routerLink="/register">
+              <button class="btn btn-outline-light my-2 my-sm-0 float-right"
+                      type="button">
+                Register
+              </button>
+            </a>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-</div>
+</nav>
+
