--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -20,56 +20,78 @@
   <!--</div>-->
   <!--<div class="col-2 container">-->
     <!--<div class="row">-->
-      <!--<button (click)="navigateToLogin()"-->
-              <!--class="btn btn-primary">-->
-        <!--Login-->
-      <!--</button>-->
-      <!--<button (click)="navigateToRegister()"-->
-              <!--class="btn btn-primary">-->
-        <!--Register-->
-      <!--</button>-->
+      <!--<div *ngIf="!currentUser.username">-->
+        <!--<a routerLink="/login">-->
+          <!--<button class="btn btn-primary">-->
+            <!--Login-->
+          <!--</button>-->
+        <!--</a>-->
+        <!--<a routerLink="/register">-->
+          <!--<button class="btn btn-primary">-->
+            <!--Register-->
+          <!--</button>-->
+        <!--</a>-->
+      <!--</div>-->
+      <!--<div *ngIf="currentUser.username">-->
+        <!--<h3 class="navbar-brand">-->
+          <!--Logged in:-->
+          <!--<a routerLink="/profile"-->
+             <!--class="wbdv-username-anchor">-->
+            <!--{{currentUser.username}}-->
+          <!--</a>-->
+        <!--</h3>-->
+      <!--</div>-->
     <!--</div>-->
   <!--</div>-->
 <!--</div>-->
 
-<nav class="navbar navbar-dark bg-dark justify-content-between">
-  <div class="row">
+<nav class="navbar navbar-dark bg-dark ">
+  <div class="row wbdv-navbar">
     <div class="col-2">
+      <!--<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR3NvjxIvkMrGJ6EaZ9AejCQghC7mdTgE9xqjbZ42ZfaIR9Iyn"-->
+      <!--(click)="goHome()"-->
+      <!--width="120">-->
       <h3 class="navbar-brand">Eze-Cuisine</h3>
     </div>
-    <div class="col-10">
-      <form class="form-inline">
-        <div class="row">
-          <div class="col-8 text-center">
-            <input type="text"
-                   class="form-control mr-sm-2"
-                   [(ngModel)]="searchText"
-                   (keyup.enter)="navigate(searchText)"
-                   placeholder="Search for recipes"
-                   aria-label="Search"/>
-            <button type="button"
-                    (click)="navigate(searchText)"
-                    class="btn btn-dark wbdv-search-button">
-              <span class="fa fa-search"></span>
-            </button>
-          </div>
-          <div class="col-4">
-            <a routerLink="/login">
-              <button class="btn btn-outline-light my-2 my-sm-0 float-right"
-                      type="button">
-                Login
-              </button>
-            </a>
-            <a routerLink="/register">
-              <button class="btn btn-outline-light my-2 my-sm-0 float-right"
-                      type="button">
-                Register
-              </button>
-            </a>
-          </div>
+    <div class="col-7">
+      <div class="row">
+        <div class="col-11 wbdv-search-input">
+          <input class="form-control"
+                 [(ngModel)]="searchText"
+                 (keyup.enter)="navigate(searchText)"
+                 placeholder="Search for recipes"/>
         </div>
-      </form>
+        <button type="button"
+                (click)="navigate(searchText)"
+                class="btn btn-dark wbdv-search-button">
+          <span class="fa fa-search"></span>
+        </button>
+      </div>
+    </div>
+    <div class="col-3 wbdv-login-register">
+      <div *ngIf="!currentUser['username']">
+        <a routerLink="/register">
+          <button class="btn btn-outline-light my-2 my-sm-0 float-right"
+                  type="button">
+            Register
+          </button>
+        </a>
+        <a routerLink="/login">
+          <button class="btn btn-outline-light my-2 my-sm-0 float-right"
+                  type="button">
+            Login
+          </button>
+        </a>
+      </div>
+      <div *ngIf="currentUser['username']">
+      <h3 class="navbar-brand float-right">
+        Logged in:
+        <a routerLink="/profile"
+           class="wbdv-username-anchor">
+          {{currentUser['username']}}
+        </a>
+      </h3>
+      </div>
     </div>
   </div>
 </nav>
-
