--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -48,6 +48,9 @@
   <input [(ngModel)]="user['email']"
          placeholder="email"
          class="form-control"/>
+  <input [(ngModel)]="user['role']"
+         placeholder="role"
+         class="form-control"/>
   <button (click)="update(user)"
           class="btn btn-primary btn-block">
     Update
