--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -36,7 +36,8 @@
     </button>
   </div>
 
-  <input [(ngModel)]="user['username']"
+  <input readonly
+         [(ngModel)]="user['username']"
          placeholder="username"
          class="form-control"/>
   <input [(ngModel)]="user['firstName']"
@@ -48,7 +49,8 @@
   <input [(ngModel)]="user['email']"
          placeholder="email"
          class="form-control"/>
-  <input [(ngModel)]="user['role']"
+  <input readonly
+         [(ngModel)]="user['role']"
          placeholder="role"
          class="form-control"/>
   <button (click)="update(user)"
