updating recipe model

--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -11,7 +11,12 @@
       <h1>
         {{recipeDetails['name']}}
       </h1>
-      <h2>Rating: {{recipeDetails['rating']}}</h2>
+      <h2>Yield: {{recipeDetails['yield']}}</h2>
+      <h2>Total time: {{recipeDetails['totalTime']}}</h2>
+      <h2>Number of servings: {{recipeDetails['numberOfServings']}}</h2>
+      <h2>Course: {{recipeDetails['course']}}</h2>
+      <h2>Rating: {{recipeDetails['yummlyRating']}}</h2>
+
     </div>
   </div>
   <ul class="list-group wbdv-recipe">
