added followers and following to user profile page

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,17 +1,39 @@
-<h1>
-  {{user.username}}
-</h1>
+<div class="container-fluid">
+  <h1>
+    {{user.username}}
+  </h1>
+  <button class="btn btn-warning"
+          (click)="follow()">
+    Follow
+  </button>
 
-<h2>Liked recipes</h2>
-<ul class="list-group">
-  <li *ngFor="let likedRecipe of likedRecipes" class="list-group-item">
-    {{likedRecipe.recipe.name}}
-  </li>
-</ul>
+  <h2>Liked recipes</h2>
+  <ul class="list-group">
+    <li *ngFor="let likedRecipe of likedRecipes" class="list-group-item">
+      {{likedRecipe.recipe.name}}
+    </li>
+  </ul>
 
-<h2>Rated recipes</h2>
-<ul class="list-group">
-  <li *ngFor="let ratedRecipe of ratedRecipes" class="list-group-item">
-    {{ratedRecipe.recipe.name}}
-  </li>
-</ul>
+  <h2>Rated recipes</h2>
+  <ul class="list-group">
+    <li *ngFor="let ratedRecipe of ratedRecipes" class="list-group-item">
+      {{ratedRecipe.recipe.name}}
+    </li>
+  </ul>
+
+  <h2>Followers</h2>
+  <ul class="list-group">
+    <li *ngFor="let follower of followers" class="list-group-item">
+      {{follower.from.username}}
+    </li>
+  </ul>
+
+  <h2>Following</h2>
+  <ul class="list-group">
+    <li *ngFor="let following of followings" class="list-group-item">
+      {{following.to.username}}
+    </li>
+  </ul>
+</div>
+
+
