--- a/src/app/recipe-details/recipe-details.component.css
+++ b/src/app/recipe-details/recipe-details.component.css
@@ -1,17 +1,17 @@
 .container {
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 1.25em;
+  margin-top: 1.25em;
 }
 
 .wbdv-recipe {
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 1.25em;
+  margin-top: 1.25em;
 }
 
 .wbdv-recipe-summary {
-  background: #f3f3f3;
   color: #a3a3a3;
-  padding: 15px;
+  padding-top: 1em;
+  padding-bottom: 1em;
   text-align: center;
 }
 
@@ -20,7 +20,7 @@
   cursor: default;
   display: inline-block;
   width: 33%;
-  font-size: 20px;
+  font-size: 1.125em;
 }
 
 .wbdv-recipe-summary-item .value {
@@ -28,6 +28,10 @@
   font-weight: 100;
   font-size: 2.25em;
   color: #e16120;
-  margin: 7px;
+  margin: 0.1em;
 }
 
+.wbdv-ingredients-heading {
+  background-color: #343A40;
+  color: white;
+}
