--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -16,7 +16,6 @@
       <h2>Number of servings: {{recipeDetails['numberOfServings']}}</h2>
       <h2>Course: {{recipeDetails['course']}}</h2>
       <h2>Rating: {{recipeDetails['yummlyRating']}}</h2>
-
     </div>
   </div>
 
@@ -36,6 +35,7 @@
   </div>
 
   <ul class="list-group wbdv-recipe">
+    <li class="list-group-item wbdv-ingredients-heading">Ingredients</li>
     <li *ngFor="let ingredient of recipeDetails['ingredients']"
         class="list-group-item">
       {{ingredient}}
