--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-6">
       <img alt="Image not available"
-           *ngIf="recipeDetails['imageUrl'] != ''"
+           *ngIf="recipeDetails['imageUrl']"
            src="{{recipeDetails['imageUrl']}}">
     </div>
     <div class="col-6">
@@ -24,11 +24,11 @@
         <span class="value">{{ingredientsCount}}</span>
         <label>Ingredients</label>
       </div>
-      <div class="wbdv-recipe-summary-item nutrition">
+      <div class="wbdv-recipe-summary-item nutrition" *ngIf="recipeDetails['numberOfServings']">
         <span class="value">{{recipeDetails['numberOfServings']}}</span>
         <label>Servings</label>
       </div>
-      <div class="wbdv-recipe-summary-item ">
+      <div class="wbdv-recipe-summary-item">
         <span class="value">{{totalTime}}</span>
         <label>{{totalTimeUnit}}</label>
       </div>
