--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -8,5 +8,20 @@
 
 .container-fluid.wbdv-profile {
   margin-top: 20px;
+  margin-bottom: 20px;
   width: 90%;
+}
+
+.wbdv-nav {
+  margin-top:20px;
+  background-color: white;
+}
+
+.wbdv-nav .active {
+  background-color: #343A40;
+}
+
+.wbdv-selection {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
