--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,67 +23,126 @@
 </nav>
 
 <div class="container-fluid wbdv-profile">
-  <div class="alert alert-success alert-dismissible fade show"
-       role="alert"
-       *ngIf="alertSuccess == true">
-    Profile updated successfully.
-    <button type="button"
-            class="close"
-            data-dismiss="alert"
-            (click)="removeAlert()"
-            aria-label="Close">
-      <span aria-hidden="true">&times;</span>
+
+  <div class="wbdv-nav">
+    <nav class="nav nav-pills nav-justified">
+      <div class="nav-item nav-link"
+           [ngClass]="{active: selection === 'Liked Recipes'}"
+           (click)="changeSelection('Liked Recipes')">
+        Liked Recipes
+      </div>
+      <div class="nav-item nav-link"
+           [ngClass]="{active: selection === 'Rated Recipes'}"
+           (click)="changeSelection('Rated Recipes')">
+        Rated Recipes
+      </div>
+      <div class="nav-item nav-link"
+           [ngClass]="{active: selection === 'Followers'}"
+           (click)="changeSelection('Followers')">
+        Followers
+      </div>
+      <div class="nav-item nav-link"
+           [ngClass]="{active: selection === 'Following'}"
+           (click)="changeSelection('Following')">
+        Following
+      </div>
+      <div class="nav-item nav-link"
+           [ngClass]="{active: selection === 'Update Profile'}"
+           (click)="changeSelection('Update Profile')">
+        Update Profile
+      </div>
+    </nav>
+  </div>
+
+  <div class="wbdv-selection" *ngIf="selection === 'Liked Recipes'">
+    <ul class="list-group">
+      <li *ngFor="let likedRecipe of likedRecipes" class="list-group-item">
+        {{likedRecipe.recipe.name}}
+      </li>
+    </ul>
+  </div>
+
+  <div class="wbdv-selection" *ngIf="selection === 'Rated Recipes'">
+    <ul class="list-group">
+      <li *ngFor="let ratedRecipe of ratedRecipes" class="list-group-item">
+        {{ratedRecipe.recipe.name}}
+      </li>
+    </ul>
+  </div>
+
+  <div class="wbdv-selection" *ngIf="selection === 'Followers'">
+    <ul class="list-group">
+      <li *ngFor="let follower of followers" class="list-group-item">
+        {{follower.from.username}}
+      </li>
+    </ul>
+  </div>
+
+  <div class="wbdv-selection" *ngIf="selection === 'Following'">
+    <ul class="list-group">
+      <li *ngFor="let following of followings" class="list-group-item">
+        {{following.to.username}}
+      </li>
+    </ul>
+  </div>
+
+  <div class="wbdv-selection" *ngIf="selection === 'Update Profile'">
+    <div class="alert alert-success alert-dismissible fade show"
+         role="alert"
+         *ngIf="alertSuccess == true">
+      Profile updated successfully.
+      <button type="button"
+              class="close"
+              data-dismiss="alert"
+              (click)="removeAlert()"
+              aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+
+    <div class="form-group">
+      <label>Username</label>
+
+      <input readonly
+             [(ngModel)]="user['username']"
+             placeholder="username"
+             class="form-control"/>
+    </div>
+
+    <div class="form-group">
+      <label>First Name</label>
+      <input [(ngModel)]="user['firstName']"
+             placeholder="first name"
+             class="form-control"/>
+    </div>
+
+    <div class="form-group">
+      <label>Last Name</label>
+      <input [(ngModel)]="user['lastName']"
+             placeholder="lastName"
+             class="form-control"/>
+    </div>
+
+    <div class="form-group">
+      <label>Email</label>
+      <input [(ngModel)]="user['email']"
+             placeholder="email"
+             class="form-control"/>
+    </div>
+
+    <div class="form-group">
+      <label>Role</label>
+      <input readonly
+             [(ngModel)]="user['role']"
+             placeholder="role"
+             class="form-control"/>
+    </div>
+
+    <button (click)="update(user)"
+            class="btn btn-dark btn-block">
+      Update
     </button>
   </div>
 
-  <input readonly
-         [(ngModel)]="user['username']"
-         placeholder="username"
-         class="form-control"/>
-  <input [(ngModel)]="user['firstName']"
-         placeholder="first name"
-         class="form-control"/>
-  <input [(ngModel)]="user['lastName']"
-         placeholder="lastName"
-         class="form-control"/>
-  <input [(ngModel)]="user['email']"
-         placeholder="email"
-         class="form-control"/>
-  <input readonly
-         [(ngModel)]="user['role']"
-         placeholder="role"
-         class="form-control"/>
-  <button (click)="update(user)"
-          class="btn btn-primary btn-block">
-    Update
-  </button>
-
-  <h2>Liked recipes</h2>
-  <ul class="list-group">
-    <li *ngFor="let likedRecipe of likedRecipes" class="list-group-item">
-      {{likedRecipe.recipe.name}}
-    </li>
-  </ul>
-
-  <h2>Rated recipes</h2>
-  <ul class="list-group">
-    <li *ngFor="let ratedRecipe of ratedRecipes" class="list-group-item">
-      {{ratedRecipe.recipe.name}}
-    </li>
-  </ul>
-
-  <h2>Followers</h2>
-  <ul class="list-group">
-    <li *ngFor="let follower of followers" class="list-group-item">
-      {{follower.from.username}}
-    </li>
-  </ul>
-
-  <h2>Following</h2>
-  <ul class="list-group">
-    <li *ngFor="let following of followings" class="list-group-item">
-      {{following.to.username}}
-    </li>
-  </ul>
 </div>
 
