improving UI for login, register and user profile

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -10,4 +10,10 @@ img {
   margin-right: 5px;
 }
 
+.wbdv-group-item {
+  cursor: pointer;
+}
 
+.wbdv-pagination-component {
+  text-align: center;
+}
