--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,12 +30,21 @@
     </button>
   </div>
 
-  <input [(ngModel)]="username"
-         placeholder="username"
-         class="form-control"/>
-  <input [(ngModel)]="password"
-         placeholder="password"
-         class="form-control"/>
+  <div class="form-group">
+    <label>Username</label>
+    <input [(ngModel)]="username"
+           placeholder="username"
+           class="form-control"/>
+  </div>
+
+  <div class="form-group">
+    <label>Password</label>
+    <input [(ngModel)]="password"
+           placeholder="password"
+           type="password"
+           class="form-control"/>
+  </div>
+
   <button (click)="login(username, password)"
           class="btn btn-primary btn-block">
     Login
