--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -43,9 +43,15 @@
     </button>
   </div>
 
+  <div class="form-group">
+    <label>Username</label>
   <input [(ngModel)]="username"
          placeholder="username"
          class="form-control"/>
+  </div>
+
+  <div class="form-group">
+    <label>Role</label>
   <select [(ngModel)]="userRole"
           class="form-control">
     <option value="" disabled selected>What do you want to be?</option>
@@ -53,12 +59,24 @@
     <option value="Chef">Chef</option>
     <option value="Critic">Critic</option>
   </select>
+  </div>
+
+  <div class="form-group">
+    <label>Password</label>
   <input [(ngModel)]="password"
          placeholder="password"
+         type="password"
          class="form-control"/>
+  </div>
+
+  <div class="form-group">
+    <label>Verify Password</label>
   <input [(ngModel)]="password2"
          placeholder="verify password"
+         type="password"
          class="form-control"/>
+  </div>
+  
   <button (click)="register(username, password, password2)"
           class="btn btn-primary btn-block">
     Register
