--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -39,12 +39,12 @@
     </li>
   </ul>
   <button class="btn btn-primary"
-          *ngIf="!(this.currentUser.username) || !isLiked()"
+          *ngIf="!(this.currentUser.username) || !isRecipeLiked"
           (click)="like()">
     Like
   </button>
   <button class="btn btn-primary"
-          *ngIf="isLiked()"
+          *ngIf="isRecipeLiked"
           (click)="unlike()">
     Unlike
   </button>
